[package]
name = "adventofcode-2020"
version = "0.1.0"
authors = ["Henning Holm <git@henningholm.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
num-integer = "0.1"
regex = "1"

[[bin]]
name = "day-01"
path = "src/bin/day-01.rs"

[[bin]]
name = "day-02"
path = "src/bin/day-02.rs"

[[bin]]
name = "day-03"
path = "src/bin/day-03.rs"

[[bin]]
name = "day-04"
path = "src/bin/day-04.rs"

[[bin]]
name = "day-05"
path = "src/bin/day-05.rs"

[[bin]]
name = "day-06"
path = "src/bin/day-06.rs"

[[bin]]
name = "day-07"
path = "src/bin/day-07.rs"

[[bin]]
name = "day-08"
path = "src/bin/day-08.rs"

[[bin]]
name = "day-09"
path = "src/bin/day-09.rs"

[[bin]]
name = "day-10"
path = "src/bin/day-10.rs"

[[bin]]
name = "day-11"
path = "src/bin/day-11.rs"

[[bin]]
name = "day-12"
path = "src/bin/day-12.rs"

[[bin]]
name = "day-13"
path = "src/bin/day-13.rs"

[[bin]]
name = "day-14"
path = "src/bin/day-14.rs"

[[bin]]
name = "day-15"
path = "src/bin/day-15.rs"

[[bin]]
name = "day-16"
path = "src/bin/day-16.rs"

[[bin]]
name = "day-17"
path = "src/bin/day-17.rs"

[[bin]]
name = "day-18"
path = "src/bin/day-18.rs"

[[bin]]
name = "day-19"
path = "src/bin/day-19.rs"

[[bin]]
name = "day-20"
path = "src/bin/day-20.rs"

[[bin]]
name = "day-21"
path = "src/bin/day-21.rs"

[[bin]]
name = "day-22"
path = "src/bin/day-22.rs"
